--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
+    <meta name="description" content="We love to provide you with all the possible important articles and keep you updated. We also work as a software services provider who develops Websites, Applications and Games">
+    <link rel="shortcut icon" href="assets/favicon_io/favicon.ico">
 
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
-    <!-- <script type="module" src="https://www.gstatic.com/firebasejs/9.6.6/firebase-app.js"></script> -->
-    <script type="module" src="../src/Components/Firebase.js"></script>
+    <!-- <link href="assets/img/favicon.png" rel="icon"> -->
+    <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
+    <link rel="manifest" href="manifest.json" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>EdithIndia Blog</title>
   </head>
   <body>
     <div id="root"></div>
